--- a/src/scss/blocks/form.scss
+++ b/src/scss/blocks/form.scss
@@ -85,12 +85,35 @@
 }
 
 .form__field[type="number"]::-webkit-inner-spin-button {
-  width: 8px;
-  height: 37px;
-
-  opacity: 1;
+  opacity: 0;
+  appearance: none;
 }
 
+.form__field-number-wrapper {
+  position: relative;
+  display: inline-block;
+}
+
+.form__number-input-button {
+  position: absolute;
+  right: 8px;
+  top: 50%;
+  padding: 0;
+  margin: 0;
+  background-color: transparent;
+
+  border-width: 0.25rem;
+  border-style: solid;
+  border-color: #333333 transparent transparent;
+  cursor: pointer;
+}
+.form__number-input-button--inc {
+  border-color: transparent transparent #333333;
+  transform: translateY(-150%);
+}
+.form__number-input-button--dec {
+  transform: translateY(50%);
+}
 
 .form__mark {
   width: 20px;
