--- a/src/views/pages/configurator-safe-region.j2
+++ b/src/views/pages/configurator-safe-region.j2
@@ -33,7 +33,15 @@
                 <div class="sfr__camera-wrapper">
                   <label class="sfr__camera-title" for="sfr-mmc-cnt">Камера видеонабюдения в местах массового скопления людей</label>
                   <div class="sfr__number-field-wrapper">
-                    <input class="sfr__number-field form__field" type="number" id="sfr-mmc-cnt" name="sfr-mmc-cnt" value="1" min="0" max="99">
+                    <div class="form__field-number-wrapper">
+                      <button class="form__number-input-button form__number-input-button--inc" type="button" tabindex="-1">
+                        <span class="visually-hidden">Увеличить.</span>
+                      </button>
+                      <input class="sfr__number-field form__field" type="number" id="sfr-mmc-cnt" name="sfr-mmc-cnt" value="1" min="0" max="99">
+                      <button class="form__number-input-button form__number-input-button--dec" type="button" tabindex="-1">
+                        <span class="visually-hidden">Увеличить.</span>
+                      </button>
+                    </div>
                     <button class="sfr__clear-button" type="button">
                       <span class="visually-hidden">Очистить поле.</span>
                     </button>
@@ -45,7 +53,15 @@
                 <div class="sfr__camera-wrapper">
                   <label class="sfr__camera-title" for="sfr-grz-cnt">Камера для регистрации государственных регистрационных знаков</label>
                   <div class="sfr__number-field-wrapper">
-                    <input class="sfr__number-field form__field" type="number" id="sfr-grz-cnt" name="sfr-grz-cnt" value="1" min="0" max="99">
+                    <div class="form__field-number-wrapper">
+                      <button class="form__number-input-button form__number-input-button--inc" type="button" tabindex="-1">
+                        <span class="visually-hidden">Увеличить.</span>
+                      </button>
+                      <input class="sfr__number-field form__field" type="number" id="sfr-grz-cnt" name="sfr-grz-cnt" value="1" min="0" max="99">
+                      <button class="form__number-input-button form__number-input-button--dec" type="button" tabindex="-1">
+                        <span class="visually-hidden">Увеличить.</span>
+                      </button>
+                    </div>
                     <button class="sfr__clear-button" type="button">
                       <span class="visually-hidden">Очистить поле.</span>
                     </button>
@@ -57,7 +73,15 @@
                 <div class="sfr__camera-wrapper">
                   <label class="sfr__camera-title" for="sfr-pvn-cnt">Камера подъездного видеонаблюдения</label>
                   <div class="sfr__number-field-wrapper">
-                    <input class="sfr__number-field form__field" type="number" id="sfr-pvn-cnt" name="sfr-pvn-cnt" value="1" min="0" max="99">
+                    <div class="form__field-number-wrapper">
+                      <button class="form__number-input-button form__number-input-button--inc" type="button" tabindex="-1">
+                        <span class="visually-hidden">Увеличить.</span>
+                      </button>
+                      <input class="sfr__number-field form__field" type="number" id="sfr-pvn-cnt" name="sfr-pvn-cnt" value="1" min="0" max="99">
+                      <button class="form__number-input-button form__number-input-button--dec" type="button" tabindex="-1">
+                        <span class="visually-hidden">Увеличить.</span>
+                      </button>
+                    </div>
                     <button class="sfr__clear-button" type="button">
                       <span class="visually-hidden">Очистить поле.</span>
                     </button>
@@ -69,7 +93,15 @@
                 <div class="sfr__camera-wrapper">
                   <label class="sfr__camera-title" for="sfr-vvn-cnt">Камера внутреннего видеонаблюдения</label>
                   <div class="sfr__number-field-wrapper">
-                    <input class="sfr__number-field form__field" type="number" id="sfr-vvn-cnt" name="sfr-vvn-cnt" value="1" min="0" max="99">
+                    <div class="form__field-number-wrapper">
+                      <button class="form__number-input-button form__number-input-button--inc" type="button" tabindex="-1">
+                        <span class="visually-hidden">Увеличить.</span>
+                      </button>
+                      <input class="sfr__number-field form__field" type="number" id="sfr-vvn-cnt" name="sfr-vvn-cnt" value="1" min="0" max="99">
+                      <button class="form__number-input-button form__number-input-button--dec" type="button" tabindex="-1">
+                        <span class="visually-hidden">Увеличить.</span>
+                      </button>
+                    </div>
                     <button class="sfr__clear-button" type="button">
                       <span class="visually-hidden">Очистить поле.</span>
                     </button>
@@ -81,7 +113,15 @@
                 <div class="sfr__camera-wrapper">
                   <label class="sfr__camera-title" for="sfr-mkdn-cnt">Многоабонентский домофон со встроенной видеокамерой</label>
                   <div class="sfr__number-field-wrapper">
-                    <input class="sfr__number-field form__field" type="number" id="sfr-mkdn-cnt" name="sfr-mkdn-cnt" value="1" min="0" max="99">
+                    <div class="form__field-number-wrapper">
+                      <button class="form__number-input-button form__number-input-button--inc" type="button" tabindex="-1">
+                        <span class="visually-hidden">Увеличить.</span>
+                      </button>
+                      <input class="sfr__number-field form__field" type="number" id="sfr-mkdn-cnt" name="sfr-mkdn-cnt" value="1" min="0" max="99">
+                      <button class="form__number-input-button form__number-input-button--dec" type="button" tabindex="-1">
+                        <span class="visually-hidden">Увеличить.</span>
+                      </button>
+                    </div>
                     <button class="sfr__clear-button" type="button">
                       <span class="visually-hidden">Очистить поле.</span>
                     </button>
@@ -93,7 +133,15 @@
                 <div class="sfr__camera-wrapper">
                   <label class="sfr__camera-title" for="sfr-tvn-cnt">Камера видеонаблюдения для распознавание лиц на транспорте</label>
                   <div class="sfr__number-field-wrapper">
-                    <input class="sfr__number-field form__field" type="number" id="sfr-tvn-cnt" name="sfr-tvn-cnt" value="1" min="0" max="99">
+                    <div class="form__field-number-wrapper">
+                      <button class="form__number-input-button form__number-input-button--inc" type="button" tabindex="-1">
+                        <span class="visually-hidden">Увеличить.</span>
+                      </button>
+                      <input class="sfr__number-field form__field" type="number" id="sfr-tvn-cnt" name="sfr-tvn-cnt" value="1" min="0" max="99">
+                      <button class="form__number-input-button form__number-input-button--dec" type="button" tabindex="-1">
+                        <span class="visually-hidden">Увеличить.</span>
+                      </button>
+                    </div>
                     <button class="sfr__clear-button" type="button">
                       <span class="visually-hidden">Очистить поле.</span>
                     </button>
@@ -105,7 +153,15 @@
                 <div class="sfr__camera-wrapper">
                   <label class="sfr__camera-title" for="sfr-tgrz-cnt">Камера для регистрации государственных регистрационных знаков на транспорте</label>
                   <div class="sfr__number-field-wrapper">
-                    <input class="sfr__number-field form__field" type="number" id="sfr-tgrz-cnt" name="sfr-tgrz-cnt" value="1" min="0" max="99">
+                    <div class="form__field-number-wrapper">
+                      <button class="form__number-input-button form__number-input-button--inc" type="button" tabindex="-1">
+                        <span class="visually-hidden">Увеличить.</span>
+                      </button>
+                      <input class="sfr__number-field form__field" type="number" id="sfr-tgrz-cnt" name="sfr-tgrz-cnt" value="1" min="0" max="99">
+                      <button class="form__number-input-button form__number-input-button--dec" type="button" tabindex="-1">
+                        <span class="visually-hidden">Увеличить.</span>
+                      </button>
+                    </div>
                     <button class="sfr__clear-button" type="button">
                       <span class="visually-hidden">Очистить поле.</span>
                     </button>
@@ -117,7 +173,15 @@
                 <div class="sfr__camera-wrapper">
                   <label class="sfr__camera-title" for="sfr-tsvn-cnt">Камера салонного видеонаблюдения на транспорте</label>
                   <div class="sfr__number-field-wrapper">
-                    <input class="sfr__number-field form__field" type="number" id="sfr-tsvn-cnt" name="sfr-tsvn-cnt" value="1" min="0" max="99">
+                    <div class="form__field-number-wrapper">
+                      <button class="form__number-input-button form__number-input-button--inc" type="button" tabindex="-1">
+                        <span class="visually-hidden">Увеличить.</span>
+                      </button>
+                      <input class="sfr__number-field form__field" type="number" id="sfr-tsvn-cnt" name="sfr-tsvn-cnt" value="1" min="0" max="99">
+                      <button class="form__number-input-button form__number-input-button--dec" type="button" tabindex="-1">
+                        <span class="visually-hidden">Увеличить.</span>
+                      </button>
+                    </div>
                     <button class="sfr__clear-button" type="button">
                       <span class="visually-hidden">Очистить поле.</span>
                     </button>
