--- a/src/scss/blocks/show-more.scss
+++ b/src/scss/blocks/show-more.scss
@@ -33,7 +33,9 @@
     right: 0;
   }
 
-  &:hover {
+  &:hover,
+  &:focus-visible {
+    outline: none;
     &::before {
       background-color: $button-color;
     }
