--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -74,3 +74,4 @@
 @import "./blocks/conf-about.scss";
 @import "./blocks/sfr.scss";
 @import "./blocks/shd.scss";
+@import "./blocks/conf-serv.scss";
