--- a/src/scss/blocks/filter.scss
+++ b/src/scss/blocks/filter.scss
@@ -15,7 +15,7 @@
 
   background-color: $white-color;
   border: 1px solid #ebebeb;
-  cursor: default;
+  cursor: pointer;
 
   transition: border-color 0.3s ease;
   transition-property: border-color, color, background-color;
@@ -31,6 +31,33 @@
 
   &:active {
     opacity: 0.7;
+  }
+}
+
+.filter__image {
+  width: auto;
+  height: 22px;
+  max-height: 22px;
+}
+
+
+.filter--big {
+  padding: 8px 10px;
+  width: 100%;
+  max-width: 100%;
+  height: 52px;
+
+  @media (min-width: $desktop-width) {
+    height: 73px;
+    max-width: 216px;
+  }
+
+  & .filter__image {
+    max-height: 100%;
+    height: auto;
+    width: auto;
+    margin: auto;
+    object-fit: contain;
   }
 }
 
@@ -63,10 +90,4 @@
   &::after {
     transform: translateY(-50%) rotate(45deg);
   }
-}
-
-.filter__image {
-  width: auto;
-  height: 22px;
-  max-height: 22px;
 }
