--- a/src/scss/blocks/product-card.scss
+++ b/src/scss/blocks/product-card.scss
@@ -5,6 +5,8 @@
   padding: 20px;
 
   background-color: $white-color;
+  border: 1px solid #ebebeb;
+  box-shadow: 2px 2px 10px rgba(178, 176, 199, 0.35);
 
   &:hover {
     & .product-card__title {
@@ -102,6 +104,7 @@
 .product-card__prices-wrapper {
   display: flex;
   flex-direction: column;
+  margin-right: auto;
 }
 
 .product-card__price {
@@ -125,7 +128,7 @@
 
 .product-card__button {
   z-index: 1;
-
+  margin-left: auto;
   min-width: 130px;
 
   clip-path: none;
