--- a/src/views/pages/configurator-server.j2
+++ b/src/views/pages/configurator-server.j2
@@ -20,6 +20,322 @@
       </div>
     </div>
 
+    <section class="conf-serv catalog section">
+      <div class="container">
+        <div class="conf-serv__content">
+          <h1 class="conf-serv__title title">Конфигуратор серверов</h1>
+          <div class="catalog__filters-group catalog__filters-group--vendors">
+            <ul class="conf-serv__filters-list catalog__filters-list">
+              <li class="conf-serv__filters-item catalog__filters-item">
+                <button class="filter filter--big" data-filter-type="vendor" data-filter-value="exapower" type="button">
+                  <span class="visually-hidden">EXAPower.</span>
+                  <img class="filter__image" src="@img/filters/exapower-big.png" alt="Логотип компании EXAPower">
+                </button>
+              </li>
+              <li class="conf-serv__filters-item catalog__filters-item">
+                <button class="filter filter--big" data-filter-type="vendor" data-filter-value="lenovo" type="button">
+                  <span class="visually-hidden">Lenovo.</span>
+                  <img class="filter__image" src="@img/filters/lenovo-big.png" alt="Логотип компании Lenovo">
+                </button>
+              </li>
+              <li class="conf-serv__filters-item catalog__filters-item">
+                <button class="filter filter--big" data-filter-type="vendor" data-filter-value="hp" type="button">
+                  <span class="visually-hidden">hp.</span>
+                  <img class="filter__image" src="@img/filters/hp-big.png" alt="Логотип компании hp">
+                </button>
+              </li>
+              <li class="conf-serv__filters-item catalog__filters-item">
+                <button class="filter filter--big" data-filter-type="vendor" data-filter-value="dell" type="button">
+                  <span class="visually-hidden">dell.</span>
+                  <img class="filter__image" src="@img/filters/dell-big.png" alt="Логотип компании dell">
+                </button>
+              </li>
+              <li class="conf-serv__filters-item catalog__filters-item">
+                <button class="filter filter--big" data-filter-type="vendor" data-filter-value="supermicro" type="button">
+                  <span class="visually-hidden">Supermicro.</span>
+                  <img class="filter__image" src="@img/filters/supermicro-big.png" alt="Логотип компании supermicro">
+                </button>
+              </li>
+            </ul>
+          </div>
+          <div class="conf-serv__dropdowns">
+            <ul class="conf-serv__dropdowns-list">
+              <li class="conf-serv__dropdowns-item">
+                <select class="form__select" id="conf-serv-model" name="conf-serv-model">
+                  <option value="">Выбрать модель</option>
+                  <option value="Модель 1">Модель 1</option>
+                  <option value="Модель 2">Модель 2</option>
+                  <option value="Модель 3">Модель 3</option>
+                  <option value="Модель 4">Модель 4</option>
+                </select>
+              </li>
+              <li class="conf-serv__dropdowns-item">
+                <select class="form__select" id="conf-serv-task" name="conf-serv-task">
+                  <option value="">Задача</option>
+                  <option value="Задача 1">Задача 1</option>
+                  <option value="Задача 2">Задача 2</option>
+                  <option value="Задача 3">Задача 3</option>
+                  <option value="Задача 4">Задача 4</option>
+                </select>
+              </li>
+            </ul>
+
+          </div>
+          <ol class="catalog__cards-list">
+            <li class="catalog__cards-item">
+              <div class="product-card" data-product-type="servers" data-vendor="lenovo">
+                <a class="product-card__background-link" href="./product-page.html"><span class="visually-hidden">Перейти на карточку продукта.</span></a>
+                <div class="product-card__content">
+                  <p class="product-card__title">Сервер Lenovo SR630</p>
+                  <p class="product-card__subtitle">Сервер для эффективной работы</p>
+                  <div class="product-card__image-wrapper">
+                    <img class="product-card__image" src="@img/product-card-server.png" alt="">
+                    <span class="product-card__vendor filter">
+                      <span class="visually-hidden">RDW Computers.</span>
+                      <img class="filter__image" src="@img/filters/lenovo-big.png" alt="">
+                    </span>
+                  </div>
+                  <div class="product-card__price-row">
+                    <a class="product-card__button order-button button" href="#!">Заказать</a>
+                  </div>
+                  <div class="product-card__toolbar">
+                    <div class="product-card__prices-wrapper">
+                      <span class="product-card__price">от 582 940 ₽</span>
+                    </div>
+                    <a class="product-card__toolbar-button product-card__toolbar-button--conf" href="#!">
+                      <span class="product-card__toolbar-button-text">Конфигуратор</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="catalog__cards-item">
+              <div class="product-card" data-product-type="servers" data-vendor="lenovo">
+                <a class="product-card__background-link" href="./product-page.html"><span class="visually-hidden">Перейти на карточку продукта.</span></a>
+                <div class="product-card__content">
+                  <p class="product-card__title">Сервер Lenovo SR630</p>
+                  <p class="product-card__subtitle">Сервер для эффективной работы</p>
+                  <div class="product-card__image-wrapper">
+                    <img class="product-card__image" src="@img/product-card-server.png" alt="">
+                    <span class="product-card__vendor filter">
+                      <span class="visually-hidden">RDW Computers.</span>
+                      <img class="filter__image" src="@img/filters/lenovo-big.png" alt="">
+                    </span>
+                  </div>
+                  <div class="product-card__price-row">
+                    <a class="product-card__button order-button button" href="#!">Заказать</a>
+                  </div>
+                  <div class="product-card__toolbar">
+                    <div class="product-card__prices-wrapper">
+                      <span class="product-card__price">от 582 940 ₽</span>
+                    </div>
+                    <a class="product-card__toolbar-button product-card__toolbar-button--conf" href="#!">
+                      <span class="product-card__toolbar-button-text">Конфигуратор</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="catalog__cards-item">
+              <div class="product-card" data-product-type="servers" data-vendor="lenovo">
+                <a class="product-card__background-link" href="./product-page.html"><span class="visually-hidden">Перейти на карточку продукта.</span></a>
+                <div class="product-card__content">
+                  <p class="product-card__title">Сервер Lenovo SR630</p>
+                  <p class="product-card__subtitle">Сервер для эффективной работы</p>
+                  <div class="product-card__image-wrapper">
+                    <img class="product-card__image" src="@img/product-card-server.png" alt="">
+                    <span class="product-card__vendor filter">
+                      <span class="visually-hidden">RDW Computers.</span>
+                      <img class="filter__image" src="@img/filters/lenovo-big.png" alt="">
+                    </span>
+                  </div>
+                  <div class="product-card__price-row">
+                    <a class="product-card__button order-button button" href="#!">Заказать</a>
+                  </div>
+                  <div class="product-card__toolbar">
+                    <div class="product-card__prices-wrapper">
+                      <span class="product-card__price">от 582 940 ₽</span>
+                    </div>
+                    <a class="product-card__toolbar-button product-card__toolbar-button--conf" href="#!">
+                      <span class="product-card__toolbar-button-text">Конфигуратор</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="catalog__cards-item">
+              <div class="product-card" data-product-type="servers" data-vendor="lenovo">
+                <a class="product-card__background-link" href="./product-page.html"><span class="visually-hidden">Перейти на карточку продукта.</span></a>
+                <div class="product-card__content">
+                  <p class="product-card__title">Сервер Lenovo SR630</p>
+                  <p class="product-card__subtitle">Сервер для эффективной работы</p>
+                  <div class="product-card__image-wrapper">
+                    <img class="product-card__image" src="@img/product-card-server.png" alt="">
+                    <span class="product-card__vendor filter">
+                      <span class="visually-hidden">RDW Computers.</span>
+                      <img class="filter__image" src="@img/filters/lenovo-big.png" alt="">
+                    </span>
+                  </div>
+                  <div class="product-card__price-row">
+                    <a class="product-card__button order-button button" href="#!">Заказать</a>
+                  </div>
+                  <div class="product-card__toolbar">
+                    <div class="product-card__prices-wrapper">
+                      <span class="product-card__price">от 582 940 ₽</span>
+                    </div>
+                    <a class="product-card__toolbar-button product-card__toolbar-button--conf" href="#!">
+                      <span class="product-card__toolbar-button-text">Конфигуратор</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="catalog__cards-item">
+              <div class="product-card" data-product-type="servers" data-vendor="lenovo">
+                <a class="product-card__background-link" href="./product-page.html"><span class="visually-hidden">Перейти на карточку продукта.</span></a>
+                <div class="product-card__content">
+                  <p class="product-card__title">Сервер Lenovo SR630</p>
+                  <p class="product-card__subtitle">Сервер для эффективной работы</p>
+                  <div class="product-card__image-wrapper">
+                    <img class="product-card__image" src="@img/product-card-server.png" alt="">
+                    <span class="product-card__vendor filter">
+                      <span class="visually-hidden">RDW Computers.</span>
+                      <img class="filter__image" src="@img/filters/lenovo-big.png" alt="">
+                    </span>
+                  </div>
+                  <div class="product-card__price-row">
+                    <a class="product-card__button order-button button" href="#!">Заказать</a>
+                  </div>
+                  <div class="product-card__toolbar">
+                    <div class="product-card__prices-wrapper">
+                      <span class="product-card__price">от 582 940 ₽</span>
+                    </div>
+                    <a class="product-card__toolbar-button product-card__toolbar-button--conf" href="#!">
+                      <span class="product-card__toolbar-button-text">Конфигуратор</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="catalog__cards-item">
+              <div class="product-card" data-product-type="servers" data-vendor="lenovo">
+                <a class="product-card__background-link" href="./product-page.html"><span class="visually-hidden">Перейти на карточку продукта.</span></a>
+                <div class="product-card__content">
+                  <p class="product-card__title">Сервер Lenovo SR630</p>
+                  <p class="product-card__subtitle">Сервер для эффективной работы</p>
+                  <div class="product-card__image-wrapper">
+                    <img class="product-card__image" src="@img/product-card-server.png" alt="">
+                    <span class="product-card__vendor filter">
+                      <span class="visually-hidden">RDW Computers.</span>
+                      <img class="filter__image" src="@img/filters/lenovo-big.png" alt="">
+                    </span>
+                  </div>
+                  <div class="product-card__price-row">
+                    <a class="product-card__button order-button button" href="#!">Заказать</a>
+                  </div>
+                  <div class="product-card__toolbar">
+                    <div class="product-card__prices-wrapper">
+                      <span class="product-card__price">от 582 940 ₽</span>
+                    </div>
+                    <a class="product-card__toolbar-button product-card__toolbar-button--conf" href="#!">
+                      <span class="product-card__toolbar-button-text">Конфигуратор</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="catalog__cards-item">
+              <div class="product-card" data-product-type="servers" data-vendor="lenovo">
+                <a class="product-card__background-link" href="./product-page.html"><span class="visually-hidden">Перейти на карточку продукта.</span></a>
+                <div class="product-card__content">
+                  <p class="product-card__title">Сервер Lenovo SR630</p>
+                  <p class="product-card__subtitle">Сервер для эффективной работы</p>
+                  <div class="product-card__image-wrapper">
+                    <img class="product-card__image" src="@img/product-card-server.png" alt="">
+                    <span class="product-card__vendor filter">
+                      <span class="visually-hidden">RDW Computers.</span>
+                      <img class="filter__image" src="@img/filters/lenovo-big.png" alt="">
+                    </span>
+                  </div>
+                  <div class="product-card__price-row">
+                    <a class="product-card__button order-button button" href="#!">Заказать</a>
+                  </div>
+                  <div class="product-card__toolbar">
+                    <div class="product-card__prices-wrapper">
+                      <span class="product-card__price">от 582 940 ₽</span>
+                    </div>
+                    <a class="product-card__toolbar-button product-card__toolbar-button--conf" href="#!">
+                      <span class="product-card__toolbar-button-text">Конфигуратор</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="catalog__cards-item">
+              <div class="product-card" data-product-type="servers" data-vendor="lenovo">
+                <a class="product-card__background-link" href="./product-page.html"><span class="visually-hidden">Перейти на карточку продукта.</span></a>
+                <div class="product-card__content">
+                  <p class="product-card__title">Сервер Lenovo SR630</p>
+                  <p class="product-card__subtitle">Сервер для эффективной работы</p>
+                  <div class="product-card__image-wrapper">
+                    <img class="product-card__image" src="@img/product-card-server.png" alt="">
+                    <span class="product-card__vendor filter">
+                      <span class="visually-hidden">RDW Computers.</span>
+                      <img class="filter__image" src="@img/filters/lenovo-big.png" alt="">
+                    </span>
+                  </div>
+                  <div class="product-card__price-row">
+                    <a class="product-card__button order-button button" href="#!">Заказать</a>
+                  </div>
+                  <div class="product-card__toolbar">
+                    <div class="product-card__prices-wrapper">
+                      <span class="product-card__price">от 582 940 ₽</span>
+                    </div>
+                    <a class="product-card__toolbar-button product-card__toolbar-button--conf" href="#!">
+                      <span class="product-card__toolbar-button-text">Конфигуратор</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="catalog__cards-item">
+              <div class="product-card" data-product-type="servers" data-vendor="lenovo">
+                <a class="product-card__background-link" href="./product-page.html"><span class="visually-hidden">Перейти на карточку продукта.</span></a>
+                <div class="product-card__content">
+                  <p class="product-card__title">Сервер Lenovo SR630</p>
+                  <p class="product-card__subtitle">Сервер для эффективной работы</p>
+                  <div class="product-card__image-wrapper">
+                    <img class="product-card__image" src="@img/product-card-server.png" alt="">
+                    <span class="product-card__vendor filter">
+                      <span class="visually-hidden">RDW Computers.</span>
+                      <img class="filter__image" src="@img/filters/lenovo-big.png" alt="">
+                    </span>
+                  </div>
+                  <div class="product-card__price-row">
+                    <a class="product-card__button order-button button" href="#!">Заказать</a>
+                  </div>
+                  <div class="product-card__toolbar">
+                    <div class="product-card__prices-wrapper">
+                      <span class="product-card__price">от 582 940 ₽</span>
+                    </div>
+                    <a class="product-card__toolbar-button product-card__toolbar-button--conf" href="#!">
+                      <span class="product-card__toolbar-button-text">Конфигуратор</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ol>
+          <button class="catalog__show-more show-more" type="button">
+            <svg class="show-more__icon" width="10" height="15" viewBox="0 0 10 15">
+              <use xlink:href="img/sprite.svg#next-arrow-icon"></use>
+            </svg>
+            <span class="show-more__text">Показать еще</span>
+          </button>
+        </div>
+      </div>
+    </section>
+
     {% include "./blocks/need-help.j2" %}
   </main>
 {% endblock content %}
@@ -29,6 +345,7 @@
 {% endblock %}
 
 {% block js %}
+  <script src="./js/conf-serv.min.js"></script>
   <script src="./js/need-help.min.js"></script>
   <script src="./js/main.min.js"></script>
 {% endblock %}
