--- a/src/scss/blocks/product-card.scss
+++ b/src/scss/blocks/product-card.scss
@@ -1,12 +1,12 @@
 .product-card {
   position: relative;
 
-  max-width: 363px;
+  max-width: $average-mobile-width;
   padding: 20px;
 
   background-color: $white-color;
   border: 1px solid #ebebeb;
-  box-shadow: 2px 2px 10px rgba(178, 176, 199, 0.35);
+  box-shadow: 2px 2px 10px rgb(178 176 199 / 35%);
 
   &:hover {
     & .product-card__title {
@@ -128,8 +128,9 @@
 
 .product-card__button {
   z-index: 1;
-  margin-left: auto;
+
   min-width: 130px;
+  margin-left: auto;
 
   clip-path: none;
 
