--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -6,6 +6,7 @@ $paddings-desktop: $pads-d * 1px;
 
 // Viewports
 $min-mobile-width: 320px;
+$average-mobile-width: 400px;
 $tablet-width: 768px;
 $desktop-width: 1121px + 2 * $paddings-desktop;
 $max-mobile-width: $tablet-width - 1px;
@@ -13,7 +14,6 @@ $max-tablet-width: $desktop-width - 1px;
 
 // Colors
 $primary-color: #453fa9;
-// $secondary-color: #fcc944;
 $button-color: #ff8000;
 $bg-color: #453fa9;
 $bg2-color: #f7f7fd;
@@ -23,8 +23,6 @@ $grey-color: #818181;
 $aqua-color: #2aa898;
 $blue-color: #0eadff;
 $testcolor: #fffeee;
-
-
 
 // Font
 $jost-font: "Jost", "Arial", sans-serif;
