сделал шаблоны для трех секций

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -18,11 +18,12 @@ $button-color: #ff8000;
 $bg-color: #453fa9;
 $bg2-color: #f7f7fd;
 $white-color: #ffffff;
-$black-color: #232323;
+$black-color: #333333;
 $grey-color: #818181;
 $aqua-color: #2aa898;
 $blue-color: #0eadff;
 $testcolor: #fffeee;
+$par-color: #2c2c2c;
 
 // Font
 $jost-font: "Jost", "Arial", sans-serif;
