--- a/src/scss/blocks/button.scss
+++ b/src/scss/blocks/button.scss
@@ -25,7 +25,7 @@ $button-height: 47;
   &:hover {
     color: $button-color;
 
-    background-color: #ffffff;
+    background-color: $white-color;
   }
 
   &:focus-visible {
@@ -34,5 +34,15 @@ $button-height: 47;
 
   &:active {
     opacity: 0.7;
+  }
+}
+
+.button--blue {
+  min-width: 220px;
+
+  &:hover {
+    color: $white-color;
+
+    background-color: $blue-color;
   }
 }
