--- a/src/scss/blocks/page.scss
+++ b/src/scss/blocks/page.scss
@@ -10,6 +10,9 @@
   margin: 0 auto;
 
   font-family: "Proxima Nova", "Arial", sans-serif;
+  color: $black-color;
+  font-size: 16px;
+  line-height: 19px;
 }
 
 .menu-opened {
