--- a/src/scss/blocks/section.scss
+++ b/src/scss/blocks/section.scss
@@ -1,4 +1,143 @@
+.section {
+  &--with-paddings {
+    padding: 30px 0;
+
+    @media (min-width: $desktop-width) {
+      padding: 50px 0;
+    }
+  }
+
+  &--lb-bg {
+    background-color: $bg2-color;
+  }
+}
 .section__content {
   display: flex;
   flex-direction: column;
+}
+
+.section__title {
+  margin: 0;
+  margin-bottom: 15px;
+  padding: 0;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 115%;
+}
+
+.section__subtitle {
+
+}
+
+.section__text-content {
+  margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.section__paragraph {
+  margin: 0;
+  padding: 0;
+  color: $par-color;
+}
+
+.section__list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+  @media (min-width: $tablet-width) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+.section__list--four-in-row {
+  @media (min-width: $desktop-width) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+.section__list-item {
+  width: 100%;
+}
+.section__card {
+
+}
+
+.section__card-content {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.section__card-title {
+  margin: 0;
+  padding: 0;
+  font-family: $jost-font;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 23px;
+}
+.section__card-paragraph {
+  margin: 0;
+  padding: 0;
+
+}
+.section__card-button {
+  width: 100%;
+  max-width: $average-mobile-width;
+
+  @media (min-width: $tablet-width) {
+    max-width: 220px;
+  }
+}
+
+.section__card-button--hidden {
+  @media (min-width: $desktop-width) {
+    visibility: hidden;
+    opacity: 0;
+  }
+}
+
+.section__card:hover .section__card-button--hidden {
+  @media (min-width: $desktop-width) {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+.section__card-image-wrapper {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  height: 200px;
+  overflow: hidden;
+  width: 100%;
+}
+
+.section__card-image {
+  width: 100%;
+  height: auto;
+  margin: auto;
+  object-fit: cover;
+}
+
+.section__card--with-btn {
+  padding: 20px;
+  background-color: $bg2-color;
+
+  @media (min-width: $desktop-width) {
+    padding: 30px 20px;
+  }
+}
+
+.section__card--with-img {
+
 }
