--- a/src/views/pages/templates.j2
+++ b/src/views/pages/templates.j2
@@ -195,6 +195,109 @@
         </div>
       </div>
     </section>
+
+    <section class="section section--lb-bg section--with-paddings">
+      <div class="container">
+        <div class="section__content section__content--with-slider">
+          <div class="section__half">
+            <h2 class="section__main-title">Какие системы мы поддерживаем</h2>
+            <div class="section__swiper-wrapper">
+              <div class="section__swiper section__swiper--main swiper">
+                <div class="swiper-wrapper">
+                  <div class="section__swiper-slide swiper-slide">
+                    <picture class="section__swiper-slide-wrapper">
+                      <source type="image/webp" srcset="https://picsum.photos/600/600?random={{imageCount}} 1x, https://picsum.photos/600/600?random={{imageCount}} 2x">
+                      <img class="section__big-image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
+                      {% set imageCount = imageCount + 1%}
+                    </picture>
+                  </div>
+                  <div class="section__swiper-slide swiper-slide">
+                    <picture class="section__swiper-slide-wrapper">
+                      <source type="image/webp" srcset="https://picsum.photos/600/600?random={{imageCount}} 1x, https://picsum.photos/600/600?random={{imageCount}} 2x">
+                      <img class="section__big-image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
+                      {% set imageCount = imageCount + 1%}
+                    </picture>
+                  </div>
+                  <div class="section__swiper-slide swiper-slide">
+                    <picture class="section__swiper-slide-wrapper">
+                      <source type="image/webp" srcset="https://picsum.photos/600/600?random={{imageCount}} 1x, https://picsum.photos/600/600?random={{imageCount}} 2x">
+                      <img class="section__big-image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
+                      {% set imageCount = imageCount + 1%}
+                    </picture>
+                  </div>
+                  <div class="section__swiper-slide swiper-slide">
+                    <picture class="section__swiper-slide-wrapper">
+                      <source type="image/webp" srcset="https://picsum.photos/600/600?random={{imageCount}} 1x, https://picsum.photos/600/600?random={{imageCount}} 2x">
+                      <img class="section__big-image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
+                      {% set imageCount = imageCount + 1%}
+                    </picture>
+                  </div>
+                  <div class="section__swiper-slide swiper-slide">
+                    <picture class="section__swiper-slide-wrapper">
+                      <source type="image/webp" srcset="https://picsum.photos/600/600?random={{imageCount}} 1x, https://picsum.photos/600/600?random={{imageCount}} 2x">
+                      <img class="section__big-image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
+                      {% set imageCount = imageCount + 1%}
+                    </picture>
+                  </div>
+                </div>
+              </div>
+              <div class="section__swiper section__swiper--thumbs swiper">
+                <div class="swiper-wrapper">
+                  {% set imageCount = imageCount - 5 %}
+                  <div class="section__swiper-thumb swiper-slide">
+                    <picture class="section__swiper-thumb-wrapper">
+                      <source type="image/webp" srcset="https://picsum.photos/600/600?random={{imageCount}} 1x, https://picsum.photos/600/600?random={{imageCount}} 2x">
+                      <img class="section__big-image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
+                      {% set imageCount = imageCount + 1%}
+                    </picture>
+                  </div>
+                  <div class="section__swiper-thumb swiper-slide">
+                    <picture class="section__swiper-thumb-wrapper">
+                      <source type="image/webp" srcset="https://picsum.photos/600/600?random={{imageCount}} 1x, https://picsum.photos/600/600?random={{imageCount}} 2x">
+                      <img class="section__big-image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
+                      {% set imageCount = imageCount + 1%}
+                    </picture>
+                  </div>
+                  <div class="section__swiper-thumb swiper-slide">
+                    <picture class="section__swiper-thumb-wrapper">
+                      <source type="image/webp" srcset="https://picsum.photos/600/600?random={{imageCount}} 1x, https://picsum.photos/600/600?random={{imageCount}} 2x">
+                      <img class="section__big-image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
+                      {% set imageCount = imageCount + 1%}
+                    </picture>
+                  </div>
+                  <div class="section__swiper-thumb swiper-slide">
+                    <picture class="section__swiper-thumb-wrapper">
+                      <source type="image/webp" srcset="https://picsum.photos/600/600?random={{imageCount}} 1x, https://picsum.photos/600/600?random={{imageCount}} 2x">
+                      <img class="section__big-image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
+                      {% set imageCount = imageCount + 1%}
+                    </picture>
+                  </div>
+                  <div class="section__swiper-thumb swiper-slide">
+                    <picture class="section__swiper-thumb-wrapper">
+                      <source type="image/webp" srcset="https://picsum.photos/600/600?random={{imageCount}} 1x, https://picsum.photos/600/600?random={{imageCount}} 2x">
+                      <img class="section__big-image" src="https://picsum.photos/600/600?random={{imageCount}}" srcset="https://picsum.photos/600/600?random={{imageCount}} 2x" alt="Описание картинки.">
+                      {% set imageCount = imageCount + 1%}
+                    </picture>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="section__text-content">
+              <p class="section__sub-title">Описательный текст блока на любое неограниченное количество символов</p>
+              <p class="section__card-paragraph">Для входа в операционную систему Microsoft Windows и корпоративную сеть пользователю необходимо иметь USB-токен или смарт-карту JaCarta.</p>
+            </div>
+            <ul class="section__check-list">
+              <li class="section__check-list-item">Компьютерные сети, сервера и АРМ</li>
+              <li class="section__check-list-item">Базы данных</li>
+              <li class="section__check-list-item">Системы связи</li>
+              <li class="section__check-list-item">Системы защиты IT инфраструктуры</li>
+              <li class="section__check-list-item">Корпоративная почта</li>
+            </ul>
+            <button class="section__button button button--blue" type="button">Запросить прайс-лист</button>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 {% endblock content %}
 
@@ -203,5 +306,7 @@
 {% endblock %}
 
 {% block js %}
+  <script src="./js/swiper-bundle.min.js"></script>
+  <script src="./js/swipers.min.js"></script>
   <script src="./js/main.min.js"></script>
 {% endblock %}
