--- a/src/scss/blocks/section.scss
+++ b/src/scss/blocks/section.scss
@@ -367,3 +367,20 @@
   }
 }
 
+.section__video-wrapper {
+  position: relative;
+
+  height: 0;
+  padding-bottom: 56.25%; /* 16:9 */
+}
+
+.section__video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+
+  width: 100%;
+  height: 100%;
+}
+
