--- a/src/views/pages/templates.j2
+++ b/src/views/pages/templates.j2
@@ -315,6 +315,20 @@
     </section>
     {% set sectionSwiperCnt = sectionSwiperCnt + 1 %}
 
+    <section class="section section--with-paddings">
+      <div class="container">
+        <div class="section__content">
+          <h3 class="section__title">Внедрение системы резервного копирования</h3>
+          <div class="section__text-content">
+            <p class="section__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores nulla consectetur vitae molestiae? Suscipit quas quos praesentium iure voluptatem placeat quasi nihil voluptatibus consequatur. Eum est et accusamus, tenetur numquam, commodi blanditiis omnis libero veniam ratione minus maxime quidem accusantium deserunt consectetur dignissimos.</p>
+            <p class="section__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores nulla consectetur vitae molestiae? Suscipit quas quos praesentium iure voluptatem placeat quasi nihil voluptatibus consequatur. Eum est et accusamus, tenetur numquam, commodi blanditiis omnis libero veniam ratione minus maxime quidem accusantium deserunt consectetur dignissimos.</p>
+          </div>
+          <div class="section__video-wrapper">
+            <iframe class="section__video" src="https://www.youtube.com/embed/fJ9rUzIMcZQ" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+    </section>
 
   </main>
 {% endblock content %}
